Fixed buttons alignment

--- a/www/public_src/css/insured_account.css
+++ b/www/public_src/css/insured_account.css
@@ -21,9 +21,11 @@ div.tool-info-container span {
 
 /* The container needed to align the buttons */
 .align-container {
+    grid-column-start: 2;
+    grid-column-end: 3;
     margin: 0 auto;
-    align: center;
-    width: 50%;
+    align: left;
+    width: 100%;
 }
 
 button.print {
@@ -36,7 +38,7 @@ button.print {
     display: inline-block;
     font-size: 16px;
     border-radius: 8px;
-    margin: 8px 8px 8px 8px;
+    margin: 8px 8px 8px 0px;
     cursor: pointer;
 }
 
